# zuvix

./: .gitignore  AI_HANDOVER.md  capacitor.config.ts  index.html  package-lock.json  package.json  test-openai.js  vite.config.ts
agents/node-agent/: agent.js
agents/security-agent/: Cargo.toml  install-termux.sh  install.bat  install.sh
docs/: ARCHITECTURE.md  HERMES_LOOP.md  SYNC_SYSTEM.md
docs/zuvix_architecture/: FEATURE_ROADMAP_AND_SYNC.md
electron/: main.ts
scripts/: setup-android.sh  setup-appwrite.sh  setup-ios.sh  setup-mac.sh  setup-supabase.sh  setup-windows.ps1
server/: package-lock.json  package.json  test-openai.cjs  zuvix_guardrails.md
server/skills/: apple-ecosystem-automation.json  file-system.json  google-workspace-automation.json  microsoft-365-automation.json  network-ping.json  notion-mcp.json  process-monitor.json  remote-mesh-executor.json  self-skill-creator.json  shell-exec.json  system-stats.json  web-browser.json  web-search.json
server/src/: a2a.ts  agent.ts  api-keys.ts  auto-kg.ts  browser.ts  canvas.ts  ceo.ts  chat-store.ts  db.ts  git.ts  hermes.ts  index.ts  knowledge-graph.ts  llm.ts  marketplace.ts  mcp.ts  memory.ts  model-router.ts  notifications.ts  router.ts  sandbox.ts  scheduler.ts  self-improve.ts  skillfish.ts  skills.ts  skillsmp.ts  sync.ts  telemetry-store.ts  vault.ts  vision.ts  voice-agent.ts  voice.ts  websearch.ts
src/: App.tsx  api.ts  config.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AgentWorldMap.tsx  Button.tsx  (+8 more)
supabase/: config.toml
(+56 files in other folders)
